--- a/CAT-Alignment.html
+++ b/CAT-Alignment.html
@@ -222,6 +222,49 @@ depth and inadequate difficulty range.
 ---
 
 # Content Alignment Indicators
+
+### CA (Index of Content Alignment) 
+Content alignment for a test event can be quantified by comparing the numbers of items from each content unit with
+the numbers specified by the test plan.
+
+&lt;br&gt;
+
+.center[![](https://github.com/Mubarak-M/Content-Alignment-in-CAT/blob/main/slides/fig/CA.png?raw=TRUE)]
+
+`\(n_i\)`: The number of items administered from the ith unit.  
+
+`\(s_i\)`: The number of items that should have been administered from that unit  
+
+k: The total number of content units  
+
+L: The number of items administered in this particular test event.
+---
+
+# Content Alignment Indicators
+
+### CA (Index of Content Alignment) 
+
+`\(CA_j\)` will equal 1.0 if the test event was perfectly aligned, with values less than 1.0 
+to the degree to which there is misalignment.
+---
+
+# Content Alignment Indicators
+
+### DM (Index of Difficulty Mismatch) 
+A test event’s difficulty alignment can be quantified by comparing the difficulty of an administered item with the
+examinee’s provisional achievement estimate at the point at which the item was selected.
+
+
+.center[![](https://github.com/Mubarak-M/Content-Alignment-in-CAT/blob/main/slides/fig/DM.png?raw=TRUE)]
+
+`\(\hat\theta_i\)`: The examinee’s provisional achievement
+estimate prior to selecting item i.  
+
+`\(b_i\)`: The difficulty of the ith item.  
+
+`\(\sigma\)`: The standard deviation of trait level estimates.   
+
+L: The test length for the current test.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
