--- a/CAT-Alignment.html
+++ b/CAT-Alignment.html
@@ -37,7 +37,7 @@ Degree of agreement between the standards and the test content
 Appropriate level of challenge for test taker
 ---
 
-# Traditional Aliggnment Process
+# Traditional Alignment Process
 
 --
 - Use of explicit
@@ -77,11 +77,6 @@ Smithson, 2011; Porter, 2002)
 - Test event and item pool may no be comparable
 ---
 
-# Testing Algorith and Content Alignment
-
-The item selection algorithm choose items of appropriate difficulty while satisfying content constraints.
-
----
 
 # Alignment information
 
@@ -265,6 +260,64 @@ estimate prior to selecting item i.
 `\(\sigma\)`: The standard deviation of trait level estimates.   
 
 L: The test length for the current test.
+---
+
+# Content Alignment Indicators
+
+### DM (Index of Difficulty Mismatch)
+
+The lowest attainable value of `\(DM_j\)` is .0, corresponding to
+a CAT whose items were perfectly matched to the provisional
+achievement estimate at each item selection.  
+
+Interpreting `\(DM_j\)` values above zero is similar to interpreting z-scores.  
+
+A `\(DM_j\)` value of .3 would indicate an average difference of .3
+standard deviations of item difficulty from the targeted trait
+level estimate. 
+---
+
+# Application on Fixed Adaptive Test Plan
+
+**Test**  
+- Operational adaptive test designed to measure the state education standards in mathematics in a Southeastern U.S. state.
+
+- 7,619 sixth-grade students in the 2012–2013 school year.  
+
+- Five content areas.  
+
+- The CAT had a fixed length of 50 items, and selected items from a pool of 1,700 candidate items.
+
+- The hypothetical test plan devised for this example assumes that each test will include 10 items for each content strand.
+---
+
+# Result
+
+.center[![](https://github.com/Mubarak-M/Content-Alignment-in-CAT/blob/main/slides/fig/Result1.png?raw=TRUE)]
+
+
+--
+-  32 test events had content alignment index values less than .70.
+
+-  12 were from students having achievement level estimates at or below the fifth percentile of students in the sixth grade.
+
+-  15 were from students having achievement level estimates at or above the 95th percentile. 
+
+-  5 were from students scattered throughout the achievement distribution.
+---
+
+# Summary
+
+- Provided framework for evaluating content alignment in CAT.
+
+- Highlighted challenges faced in conducting CAT alignment evaluation.
+
+- Raised concerns about the need to address how to identify the degree to which an item is representative
+of a content area, and which other content areas it is related to.
+
+- Raised concern about how much misalignment can be tolerated in a CAT test event without validity being unacceptably compromised?
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
